prevent overflowing

--- a/focus.css
+++ b/focus.css
@@ -9,7 +9,6 @@
 	border-color:  rgb(179,180,185);
 	border-radius : 0.7em;
 	background-color:rgb(246,246,246);
-	color: #084792b3;
 	display: inline-block;
 	padding: 0.5em;
 	font-family: focusButtonFont;
@@ -25,7 +24,6 @@
 }
 .basic_button:active {
 	border-width: 0.2em;
-	border-color: #084792b3;
 }
 .basic_banner {
 	border-width: 0px 0 0px 0;
@@ -40,12 +38,14 @@
 	background: linear-gradient(rgb(255,255,255), rgb(190,190,190)); /* Standard syntax */
 }
 .basic_accordion {
+	table-layout: fixed;
 	width: 100%;
 	border-style: solid;
 	border-width: 2px;
 	border-color: rgb(246,246,246);
 }
 .basic_accordion tr td {
+	overflow: hidden;
 	width: 5%;
 	border-style: solid;
 	border-width: 0px 3px 0px 0px;
